--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160644333-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-160644333-1');
+</script>
+
+
 
   <head>
     <title>Hello World</title>
